# capillaryElectrophoresis_app

./: CEapp_userManual_v1.2.docx  CEapp_userManual_v1.docx  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
CEtools/: filters.py  interactive.py  pca_viz.py
CEtools.egg-info/: PKG-INFO  requires.txt
app/: alignment_utils.py  app.py  common_plot.py  diversity_utils.py  misc_utils.py  nmf_meta_dashboard.py  nmf_utils.py  preprocess_baseline_utils.py  preprocess_despike_utils.py  preprocess_norm_utils.py  preprocess_smooth_utils.py  pseudotime_loader_utils.py  snr_utils.py  upload_utils.py  viz_utils.py
app/archive/: app_old.py  fileConversion_troubleshoot.ipynb  norm_troubleshooting.ipynb
scripts/: run.bat  run.sh  verify_setup.py
src/CEtools/: __init__.py
src/CEtools.egg-info/: SOURCES.txt  top_level.txt
