# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CEtools"
version = "0.1.1"
description = "Utilities for electropherogram analysis, pseudotime transforms, NNLS basis fitting, and Bokeh visualizations."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "You" }]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scipy>=1.7",
  "scikit-learn>=1.1",
]

[project.optional-dependencies]
plotting = [
  "bokeh>=2.4",
  "holoviews>=1.15",
  "panel>=0.14",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
